Updated .env file

--- a/.env
+++ b/.env
@@ -1,1 +1,6 @@
 JAWSDB_URL='mysql://qx70dezlp5ixv0bj:mqv072t19rhil8vi@u28rhuskh0x5paau.cbetxkdyhwsb.us-east-1.rds.amazonaws.com:3306/k5qhsydg3ta69aqr'
+
+
+DB_HOST='localhost'
+DB_USER='root'
+DB_Pw='26Gamers8!'
